Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120233

QtSvg does not ignore desc and title tag contents when child of text tag

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.7.0 Beta2, 6.8.0 FF
    • 6.5.3, 6.6.1
    • SVG Support
    • None
    • all
    • All
    • fd8224cdb (dev), cfb3bcd2a (6.7)

    Description

      QtSvg does not properly ignore desc and title tags and their contents when they are children of a text tag. The contents of both the desc text and title text show up when rendered.

      See the attached text_bug.svg and screenshot showing how it is rendered by QSvgRenderer.

      As per spec the "desc text" and "title text" should be ignored and not be present in the rendered svg. See the QtWebEngine screenshot for the correct rendering.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            matthias_rauter Matthias Rauter
            kevinhendricks Kevin B. Hendricks
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes